# autov43

./: Cargo.toml  README.md
src/: main.rs
src/math/: mod.rs  polynomial.rs
