[package]
name = "autov43"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# linxal = { version = "0.6", features = [] }
# ndarray = "^0.9"
ndarray = "^0.15"
ndarray-linalg = { version = "^0.14", features = ["openblas-static"] }
num-complex = "^0.4"
num-traits = "^0.2"
rand = "^0.8"
float-pretty-print = "^0.1"